WebAssembly.RuntimeError missing exception check https://bugs.webkit.org/show_bug.cgi?id=196700 <rdar://problem/49693932>

Reviewed by Yusuke Suzuki.

JSTests:

* wasm/js-api/runtime-error-should-exception-check.js: Added.

Source/JavaScriptCore:

* wasm/js/JSWebAssemblyRuntimeError.h:
* wasm/js/WebAssemblyRuntimeErrorConstructor.cpp:
(JSC::constructJSWebAssemblyRuntimeError):



Canonical link: https://commits.webkit.org/210979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244040 268f45cc-cd09-0410-ab3c-d52691b4dbfc