Source/JavaScriptCore/wasm/js/JSWebAssemblyRuntimeError.h
@@ -36,10 +36,6 @@ public:
     typedef ErrorInstance Base;
 
     static JSWebAssemblyRuntimeError* create(ExecState*, VM&, Structure*, const String&);
-    static JSWebAssemblyRuntimeError* create(ExecState* exec, VM& vm, Structure* structure, JSValue message)
-    {
-        return create(exec, vm, structure, message.isUndefined() ? String() : message.toWTFString(exec));
-    }
 
     DECLARE_INFO;
 
